--- a/template.html
+++ b/template.html
@@ -11,6 +11,8 @@
     </head>
     <body>
         <div id="app"></div>
+        <div id="root"></div>
+
 
         <!-- Many of bootstrap components require the use of JavaScript to function -->
         <!-- Popper and BootStrap JS -->
